support gm algorithm

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chainsql-keypairs": "^0.10.4",
     "chainsql-lib": "^0.17.43",
     "co": "^4.6.0",
+    "dotenv": "^8.0.0",
     "elliptic": "^5.1.0",
     "hash.js": "^1.0.3",
     "lodash": "^4.14.1",
